big big big refactoring why did I do this as a single commit seriously
updated ci

breaking changes:
changed file name generation for FullName and Name FileNameMode
changed tool to msbuild task to remove runtime dependencies (close #42)

added support for language attributes in code element
added See Also section at the end of pages grouping all seealso element
added support for see and seealso displayed text change with element value
added dotnet tool package (close #25)
added DefaultDocumentationGeneratedPages property to set which element will have its own page (close #36)

--- a/.github/workflows/ContinuousIntegration.yml
+++ b/.github/workflows/ContinuousIntegration.yml
@@ -22,6 +22,9 @@ jobs:
         source-url: https://nuget.pkg.github.com/Doraku/index.json
       env:
         NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: Run tests
+      run: dotnet test source\DefaultDocumentation.sln -c Release /p:TEST=true
       
     - name: Decrypte snk file
       env:
@@ -30,8 +33,7 @@ jobs:
 
     - name: Create package
       run: |
-        dotnet build source\DefaultDocumentation\DefaultDocumentation.csproj -c Release /p:CI_VERSION=true
-        dotnet pack source\DefaultDocumentation\DefaultDocumentation.csproj -c Release -o package --no-build /p:CI_VERSION=true
+        dotnet pack source\DefaultDocumentation.sln -c Release -o build /p:CI_VERSION=true
 
-    - name: Publish package
-      run: nuget push package\*.nupkg
+    - name: Publish packages
+      run: nuget push build\*.nupkg
