--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -16,6 +16,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '5.0.100'
-
-    - name: Compile
-      run: dotnet build source\DefaultDocumentation\DefaultDocumentation.csproj -c Release /p:TEST=true
+        
+    - name: Run tests
+      run: dotnet test source\DefaultDocumentation.sln -c Release /p:TEST=true
