--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -26,36 +26,31 @@ jobs:
         SNK_KEY: ${{ secrets.SNK_KEY }}
       run: gpg --quiet --batch --yes --decrypt --passphrase="$env:SNK_KEY" --output ds.snk ds.snk.gpg
 
-    - name: Create package
+    - name: Create packages
       run: |
-        dotnet build source\DefaultDocumentation\DefaultDocumentation.csproj -c Release /p:Version=${{ github.event.release.tag_name }}
-        dotnet pack source\DefaultDocumentation\DefaultDocumentation.csproj -c Release -o package --no-build /p:Version=${{ github.event.release.tag_name }}
-
-    - name: Create NEW_RELEASENOTES.txt
+        dotnet pack source\DefaultDocumentation.sln -c Release -o build /p:Version=${{ github.event.release.tag_name }}
+        
+    - name: Create RELEASE.txt
       run: |
-        echo "## DefaultDocumentation ${{ github.event.release.tag_name }}" | Out-File package\NEW_RELEASENOTES.txt
-        type documentation\NEXT_RELEASENOTES.txt | Out-File package\NEW_RELEASENOTES.txt -Append
-        echo "" | Out-File package\NEW_RELEASENOTES.txt -Append
-        echo "[nuget package](https://www.nuget.org/packages/DefaultDocumentation/${{ github.event.release.tag_name }})" | Out-File package\NEW_RELEASENOTES.txt -Append
+        type documentation\NEXT_RELEASENOTES.txt | Out-File build\RELEASE.txt
+        echo "" | Out-File build\RELEASE.txt -Append
+        echo "[nuget package](https://www.nuget.org/packages/DefaultDocumentation/${{ github.event.release.tag_name }})" | Out-File build\RELEASE.txt -Append
+        echo "[nuget package](https://www.nuget.org/packages/DefaultDocumentation.Console/${{ github.event.release.tag_name }})" | Out-File build\RELEASE.txt -Append
 
     - name: Update release
       uses: tubone24/update_release@v1.1.0
       env:
         GITHUB_TOKEN: ${{ github.token }}
       with:
-        release_name: DefaultDocumentation ${{ github.event.release.tag_name }}
-        body_path: .\package\NEW_RELEASENOTES.txt
+        release_name: DefaultEcs ${{ github.event.release.tag_name }}
+        body_path: .\build\RELEASE.txt
         
-    - name: Update RELEASENOTES.md
-      run: |
-        echo "" | Out-File package\NEW_RELEASENOTES.txt -Append
-        type documentation\RELEASENOTES.md | Out-File package\NEW_RELEASENOTES.txt -Append
-        type package\NEW_RELEASENOTES.txt | Out-File documentation\RELEASENOTES.md
-        echo "" | Out-File documentation\NEXT_RELEASENOTES.txt -NoNewLine
-
-    - name: Publish package
-      run: dotnet nuget push package\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-
+    - name: Clear NEXT_RELEASENOTES.txt
+      run: echo "" | Out-File documentation\NEXT_RELEASENOTES.txt -NoNewLine
+      
+    - name: Publish packages
+      run: dotnet nuget push build\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      
     - name: Commit RELEASENOTES and documentation api
       run: |
         git config --local user.email "$(git log --format='%ae' HEAD^!)"
