renamed GeneratedPage to GeneratedPages and added Home value renamed NestedTypeVisibility to NestedTypeVisibilities

--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -17,7 +17,7 @@
       HomeName="$(DefaultDocumentationHome)"
       FileNameMode="$(DefaultDocumentationFileNameMode)"
       RemoveFileExtensionFromLinks="$(DefaultDocumentationWikiLinks)"
-      NestedTypeVisibility="$(DefaultDocumentationNestedTypeVisibility)"
+      NestedTypeVisibilities="$(DefaultDocumentationNestedTypeVisibilities)"
       GeneratedPages="$(DefaultDocumentationGeneratedPages)" />
   </Target>
 </Project>
