added each page type to GeneratedPates enum moved around some file renamed DefaultDocumentationWikiLinks to DefaultDocumentationRemoveFileExtensionFromLinks renamed DefaultDocumentationHome to DefaultDocumentationAssemblyPageName

--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -14,9 +14,9 @@
       ProjectDirectoryPath="$(ProjectPath)"
       OutputDirectoryPath="$(_DefaultDocumentationFolder)"
       InvalidCharReplacement="$(DefaultDocumentationInvalidCharReplacement)"
-      HomeName="$(DefaultDocumentationHome)"
+      AssemblyPageName="$(DefaultDocumentationAssemblyPageName)"
       FileNameMode="$(DefaultDocumentationFileNameMode)"
-      RemoveFileExtensionFromLinks="$(DefaultDocumentationWikiLinks)"
+      RemoveFileExtensionFromLinks="$(DefaultDocumentationRemoveFileExtensionFromLinks)"
       NestedTypeVisibilities="$(DefaultDocumentationNestedTypeVisibilities)"
       GeneratedPages="$(DefaultDocumentationGeneratedPages)" />
   </Target>
