fixed File use by an other process IOException (resolves? #52)

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -52,6 +52,7 @@ jobs:
       run: dotnet nuget push build\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
       
     - name: Commit RELEASENOTES and documentation api
+      if: "!contains(github.event.release.tag_name, '-')"
       run: |
         git config --local user.email "$(git log --format='%ae' HEAD^!)"
         git config --local user.name "$(git log --format='%an' HEAD^!)"
