--- a/source/Directory.Build.props
+++ b/source/Directory.Build.props
@@ -39,8 +39,8 @@
   </Target>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3" />
-    <PackageReference Include="Roslynator.Analyzers" Version="3.1.0" />
-    <PackageReference Include="Roslynator.CodeAnalysis.Analyzers" Version="1.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3" PrivateAssets="all" />
+    <PackageReference Include="Roslynator.Analyzers" Version="3.1.0" PrivateAssets="all" />
+    <PackageReference Include="Roslynator.CodeAnalysis.Analyzers" Version="1.0.0" PrivateAssets="all" />
   </ItemGroup>
 </Project>
