added DefaultDocumentationGeneratedAccessModifiers property to set members of which accessibility should be generated ( closes #59) fixed multiple element with same id from different extern link files

--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -46,6 +46,7 @@
       RemoveFileExtensionFromLinks="$(DefaultDocumentationRemoveFileExtensionFromLinks)"
       NestedTypeVisibilities="$(DefaultDocumentationNestedTypeVisibilities)"
       GeneratedPages="$(DefaultDocumentationGeneratedPages)"
+      GeneratedAccessModifiers="$(DefaultDocumentationGeneratedAccessModifiers)"
       LinksOutputFilePath="$(_DefaultDocumentationLinksOutputFile)"
       LinksBaseUrl="$(DefaultDocumentationLinksBaseUrl)"
       ExternLinksFilePaths="$(_DefaultDocumentationExternLinksFiles)"/>
