--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <UsingTask TaskName="DefaultDocumentation.DefaultDocumentationTask" AssemblyFile="$(MSBuildThisFileDirectory)DefaultDocumentation.dll"/>
-  <UsingTask TaskName="EnsureDefaultDocumentationExternLinksFilesRooted" TaskFactory="CodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.v4.0.dll" >
+  <UsingTask TaskName="EnsureDefaultDocumentationExternLinksFilesRooted" TaskFactory="RoslynCodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.Core.dll" >
     <ParameterGroup>
       <ExternLinksFilePaths Required="true" />
       <Result Output="true" />
