--- a/source/Dummy/Dummy.csproj
+++ b/source/Dummy/Dummy.csproj
@@ -3,5 +3,6 @@
     <TargetFramework>net5.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <IsPackable>false</IsPackable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 </Project>
