--- a/source/DefaultDocumentation.Console/DefaultDocumentation.Console.csproj
+++ b/source/DefaultDocumentation.Console/DefaultDocumentation.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>Create a simple markdown documentation from the Visual Studio xml one.</Description>
     <RootNamespace>DefaultDocumentation</RootNamespace>
