added DefaultDocumentationIgnoreLineBreak property to state if line break in the documentation should be ignored and written as is or transformed as markdown line break (two space at the end of a line) added ignorelinebreak attribute handling to change localy DefaultDocumentationIgnoreLineBreak setting

--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -47,6 +47,7 @@
       NestedTypeVisibilities="$(DefaultDocumentationNestedTypeVisibilities)"
       GeneratedPages="$(DefaultDocumentationGeneratedPages)"
       GeneratedAccessModifiers="$(DefaultDocumentationGeneratedAccessModifiers)"
+      IgnoreLineBreak="$(DefaultDocumentationIgnoreLineBreak)"
       LinksOutputFilePath="$(_DefaultDocumentationLinksOutputFile)"
       LinksBaseUrl="$(DefaultDocumentationLinksBaseUrl)"
       ExternLinksFilePaths="$(_DefaultDocumentationExternLinksFiles)"/>
