added logging (close #69) fixed accessibility check of nested types fixed generation of nested types when declaring types are excluded

--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -36,6 +36,7 @@
     </EnsureDefaultDocumentationExternLinksFilesRooted>
 
     <DefaultDocumentationTask
+      LogLevel="$(DefaultDocumentationLogLevel)"
       AssemblyFilePath="$(TargetPath)"
       DocumentationFilePath="$(_DefaultDocumentationDocumentationFile)"
       ProjectDirectoryPath="$(ProjectDir)"
