--- a/source/DefaultDocumentation.Common/DefaultDocumentation.Common.csproj
+++ b/source/DefaultDocumentation.Common/DefaultDocumentation.Common.csproj
@@ -7,5 +7,6 @@
 
   <ItemGroup Label="Reference">
     <PackageReference Include="ICSharpCode.Decompiler" Version="7.1.0.6543" />
+    <PackageReference Include="NLog" Version="4.7.11" />
   </ItemGroup>
 </Project>
