added DefaultDocumentationIncludeUndocumentedItems property / IncludeUndocumentatedItems arg to include types and members with no documentation (closes #81)

--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -48,6 +48,7 @@
       NestedTypeVisibilities="$(DefaultDocumentationNestedTypeVisibilities)"
       GeneratedPages="$(DefaultDocumentationGeneratedPages)"
       GeneratedAccessModifiers="$(DefaultDocumentationGeneratedAccessModifiers)"
+      IncludeUndocumentedItems="$(DefaultDocumentationIncludeUndocumentedItems)"
       IgnoreLineBreak="$(DefaultDocumentationIgnoreLineBreak)"
       LinksOutputFilePath="$(_DefaultDocumentationLinksOutputFile)"
       LinksBaseUrl="$(DefaultDocumentationLinksBaseUrl)"
