--- a/source/DefaultDocumentation.Markdown.Test/DefaultDocumentation.Markdown.Test.csproj
+++ b/source/DefaultDocumentation.Markdown.Test/DefaultDocumentation.Markdown.Test.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
+    <RootNamespace>DefaultDocumentation.Markdown</RootNamespace>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.msbuild" Version="3.1.0" PrivateAssets="all"/>
+    <PackageReference Include="coverlet.msbuild" Version="3.1.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NFluent" Version="2.7.2" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
@@ -15,7 +15,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DefaultDocumentation\DefaultDocumentation.csproj" />
-    <ProjectReference Include="..\Dummy\Dummy.csproj" />
+    <ProjectReference Include="..\DefaultDocumentation.Markdown\DefaultDocumentation.Markdown.csproj" />
   </ItemGroup>
 </Project>
