--- a/source/DefaultDocumentation.Api/DefaultDocumentation.Api.csproj
+++ b/source/DefaultDocumentation.Api/DefaultDocumentation.Api.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <RootNamespace>DefaultDocumentation</RootNamespace>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
