--- a/source/DefaultDocumentation.Console/Properties/launchSettings.json
+++ b/source/DefaultDocumentation.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DefaultDocumentation.Console": {
       "commandName": "Project",
-      "commandLineArgs": "-a D:\\Projects\\DefaultDocumentation\\source\\Dummy\\bin\\Debug\\net5.0\\Dummy.dll"
+      "commandLineArgs": "-a D:\\Projects\\DefaultEcs\\source\\DefaultEcs\\bin\\Release\\netstandard2.1\\DefaultEcs.dll -o D:\\Projects\\DefaultEcs\\documentation\\api -n DefaultEcs -m Name -g Assembly Types Members"
     }
   }
 }
