--- a/.github/workflows/CodeCoverage.yml
+++ b/.github/workflows/CodeCoverage.yml
@@ -21,10 +21,10 @@ jobs:
         dotnet-version: '5.0.100'
 
     - name: Collect coverage for net5.0
-      run: dotnet test source\DefaultDocumentation.sln -c Release -p:CollectCoverage=true -p:CoverletOutputFormat=lcov -p:CoverletOutput=..\build\lcov.info /p:TEST=true
+      run: dotnet test source\DefaultDocumentation.sln -c Release -p:CollectCoverage=true -p:CoverletOutputFormat=lcov -p:CoverletOutput=..\..\build\lcov.info /p:TEST=true
 
     - name: Upload to coverall
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: 'build\lcov.net5.0.info'
+        path-to-lcov: 'build\lcov.info'
