--- a/.github/workflows/ContinuousIntegration.yml
+++ b/.github/workflows/ContinuousIntegration.yml
@@ -26,10 +26,10 @@ jobs:
         NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Build
-      run: dotnet build source\DefaultDocumentation.sln -c Release /p:TEST=true
+      run: dotnet build source\DefaultDocumentation.sln -c Release -p:TreatWarningsAsErrors=true /p:TEST=true
 
     - name: Run tests
-      run: dotnet test source\DefaultDocumentation.sln -c Release /p:TEST=true
+      run: dotnet test source\DefaultDocumentation.sln -c Release --no-build
       
     - name: Decrypte snk file
       env:
