--- a/source/DefaultDocumentation.Api/DefaultDocumentation.Api.csproj
+++ b/source/DefaultDocumentation.Api/DefaultDocumentation.Api.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="ICSharpCode.Decompiler" Version="7.1.0.6543" />
-    <PackageReference Include="NLog" Version="4.7.11" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NLog" Version="4.7.12" />
   </ItemGroup>
 </Project>
