--- a/source/.editorconfig
+++ b/source/.editorconfig
@@ -27,6 +27,9 @@ dotnet_diagnostic.CA1056.severity = none
 # CA1308: Normalize strings to uppercase
 dotnet_diagnostic.CA1308.severity = none
 
+# CA1810: Initialize reference type static fields inline
+dotnet_diagnostic.CA1810.severity = none
+
 # CA2201: Do not raise reserved exception types
 dotnet_diagnostic.CA2201.severity = none
 
