removed markdown specific settings from ISettings ensure all FileNameFactory.Clean instance are called

--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -63,8 +63,6 @@
       Plugins="$(_DefaultDocumentationPlugins)"
       FileNameFactory="$(DefaultDocumentationFileNameFactory)"
       Sections="$(DefaultDocumentationSections)"
-      Elements="$(_DefaultDocumentationElements)"
-      NestedTypeVisibilities="$(DefaultDocumentationNestedTypeVisibilities)"
-      IgnoreLineBreak="$(DefaultDocumentationIgnoreLineBreak)"/>
+      Elements="$(_DefaultDocumentationElements)"/>
   </Target>
 </Project>
