--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up dotnet
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.100'
+        dotnet-version: '6.0.x'
         
     - name: Build
       run: dotnet build source\DefaultDocumentation.sln -c Release -p:TreatWarningsAsErrors=true /p:TEST=true
