added xml documentation to DefaultDocumentation.Api

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -48,6 +48,9 @@ jobs:
         
     - name: Clear NEXT_RELEASENOTES.txt
       run: echo "" | Out-File documentation\NEXT_RELEASENOTES.txt -NoNewLine
+
+    - name: Generate documentation
+      run: dotnet run --project source\DefaultDocumentation.Console\DefaultDocumentation.Console.csproj --framework net6.0 -c Release --ConfigurationFilePath source\DefaultDocumentation.Api\DefaultDocumentation.json
       
     - name: Publish packages
       run: dotnet nuget push build\*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
