--- a/source/DefaultDocumentation.Api/DefaultDocumentation.Api.csproj
+++ b/source/DefaultDocumentation.Api/DefaultDocumentation.Api.csproj
@@ -2,7 +2,8 @@
   <PropertyGroup>
     <RootNamespace>DefaultDocumentation</RootNamespace>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <IsPackable>false</IsPackable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
