--- a/source/DefaultDocumentation.Console/DefaultDocumentation.Console.csproj
+++ b/source/DefaultDocumentation.Console/DefaultDocumentation.Console.csproj
@@ -6,6 +6,7 @@
     <TargetFrameworks>
       netcoreapp3.1;
       net5.0;
+	  net6.0;
     </TargetFrameworks>
     <ToolCommandName>defaultdocumentation</ToolCommandName>
     <PackAsTool>true</PackAsTool>
