fixed dotnet tool arguments for IEnumerable<string> fixed filename cleaning (fixes #96) removed some chars from PathCleaner which are actually ok

--- a/.github/workflows/ContinuousIntegration.yml
+++ b/.github/workflows/ContinuousIntegration.yml
@@ -10,6 +10,7 @@ on:
       - 'source/DefaultDocumentation.Api/**'
       - 'source/DefaultDocumentation.Common/**'
       - 'source/DefaultDocumentation.Console/**'
+      - 'source/DefaultDocumentation.Markdown/**'
 
 jobs:
   continuous_integration:
