--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -34,6 +34,7 @@ jobs:
       run: |
         type documentation\NEXT_RELEASENOTES.txt | Out-File build\RELEASE.txt
         echo "" | Out-File build\RELEASE.txt -Append
+        echo "[api nuget package](https://www.nuget.org/packages/DefaultDocumentation.Api/${{ github.event.release.tag_name }})" | Out-File build\RELEASE.txt -Append
         echo "[msbuild task nuget package](https://www.nuget.org/packages/DefaultDocumentation/${{ github.event.release.tag_name }})" | Out-File build\RELEASE.txt -Append
         echo "[dotnet tool nuget package](https://www.nuget.org/packages/DefaultDocumentation.Console/${{ github.event.release.tag_name }})" | Out-File build\RELEASE.txt -Append
 
