added example of a new section and element (closes #95)

--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -3,7 +3,7 @@ name: pull request
 on:
   pull_request:
     paths:
-      - 'source/DefaultDocumentation/**'
+      - 'source/**'
 
 jobs:
   pull_request:
