--- a/source/Directory.Build.props
+++ b/source/Directory.Build.props
@@ -49,7 +49,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.0.0" PrivateAssets="all" />
-		<PackageReference Include="Roslynator.Analyzers" Version="3.3.0" PrivateAssets="all" />
-		<PackageReference Include="Roslynator.CodeAnalysis.Analyzers" Version="3.3.0" PrivateAssets="all" />
+		<PackageReference Include="Roslynator.Analyzers" Version="4.0.2" PrivateAssets="all" />
+		<PackageReference Include="Roslynator.CodeAnalysis.Analyzers" Version="4.0.2" PrivateAssets="all" />
+		<PackageReference Include="Roslynator.Formatting.Analyzers" Version="4.0.2" PrivateAssets="all" />
 	</ItemGroup>
 </Project>
