fixed external type link

--- a/source/DefaultDocumentation.Console/Properties/launchSettings.json
+++ b/source/DefaultDocumentation.Console/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "DefaultDocumentation.Console": {
       "commandName": "Project",
-      "commandLineArgs": "--ConfigurationFilePath D:\\Projects\\DefaultDocumentation\\pouet.json"
+      "commandLineArgs": "--ConfigurationFilePath D:\\Projects\\DefaultDocumentation\\source\\DefaultDocumentation.Api\\DefaultDocumentation.json",
+      "workingDirectory": "D:\\Projects\\DefaultDocumentation"
     }
   }
 }
