updated sample plugin project

--- a/source/Sample/DefaultDocumentation.PluginExample/DefaultDocumentation.PluginExample.csproj
+++ b/source/Sample/DefaultDocumentation.PluginExample/DefaultDocumentation.PluginExample.csproj
@@ -11,6 +11,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="DefaultDocumentation.Api" Version="0.8.0-alpha2" />
+		<PackageReference Include="DefaultDocumentation.Api" Version="0.8.0" />
 	</ItemGroup>
 </Project>
