--- a/source/DefaultDocumentation.Markdown/DefaultDocumentation.Markdown.csproj
+++ b/source/DefaultDocumentation.Markdown/DefaultDocumentation.Markdown.csproj
@@ -1,6 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
+		<Description>Default implementation for Markdown documentation generation in DefaultDocumentation.</Description>
 		<TargetFramework>netstandard2.0</TargetFramework>
+		<!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
+		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
