--- a/source/DefaultDocumentation.Markdown/DefaultDocumentation.Markdown.csproj
+++ b/source/DefaultDocumentation.Markdown/DefaultDocumentation.Markdown.csproj
@@ -3,7 +3,7 @@
 		<Description>Default implementation for Markdown documentation generation in DefaultDocumentation.</Description>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
-		<!--<Nullable>enable</Nullable>-->
+		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
