--- a/source/DefaultDocumentation.Markdown/DefaultDocumentation.Markdown.csproj
+++ b/source/DefaultDocumentation.Markdown/DefaultDocumentation.Markdown.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<Description>Default implementation for Markdown documentation generation in DefaultDocumentation.</Description>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
