--- a/source/Sample/DefaultDocumentation.PluginExample/DefaultDocumentation.PluginExample.csproj
+++ b/source/Sample/DefaultDocumentation.PluginExample/DefaultDocumentation.PluginExample.csproj
@@ -11,6 +11,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="DefaultDocumentation.Api" Version="0.8.1" />
+		<!--<PackageReference Include="DefaultDocumentation.Api" Version="0.8.1" />-->
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\DefaultDocumentation.Markdown\DefaultDocumentation.Markdown.csproj" />
 	</ItemGroup>
 </Project>
